--- a/languages/donate-uk.po
+++ b/languages/donate-uk.po
@@ -4,13 +4,13 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2014-03-17 21:21+0300\n"
 "PO-Revision-Date: \n"
-"Last-Translator: bestwebsoft.com <plugins@bestwebsoft.com>\n"
+"Last-Translator: bestwebsoft.com <support@bestwebsoft.com>\n"
 "Language-Team: BestWebSoft <bestwebsoft.com>\n"
-"Language: ru\n"
+"Language: uk\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Poedit-SourceCharset: utf-8\n"
+"X-Poedit-SourceCharset: UTF-8\n"
 "X-Poedit-KeywordsList: __;_e\n"
 "X-Poedit-Basepath: ..\n"
 "X-Generator: Poedit 1.5.4\n"
@@ -94,7 +94,7 @@ msgstr "Кнопка користувача"
 
 #: donate.php:388 donate.php:406
 msgid "Don&apos;t show"
-msgstr ""
+msgstr "Не показувати"
 
 #: donate.php:486
 msgid "Unable to move the file"
@@ -187,13 +187,15 @@ msgstr "Установки Donate"
 
 #: donate.php:777
 msgid "Notice:"
-msgstr ""
+msgstr "Нагадування:"
 
 #: donate.php:777
 msgid ""
 "The plugin's settings have been changed. In order to save them please don't "
 "forget to click the 'Save Changes' button."
 msgstr ""
+"Налаштування плагіну було змінено. Для того, щоб зберегти ці зміни, не "
+"забудьте нажати кнопку \"Зберегти зміни\"."
 
 #: donate.php:815
 msgid "Changes saved"
@@ -267,14 +269,16 @@ msgstr "Зберегти зміни"
 #: donate.php:1053
 msgid "If you enjoy our plugin, please give it 5 stars on WordPress"
 msgstr ""
+"Якщо вам сподобався наш плагін, будь ласка, оцініть його у 5 зірочок на "
+"WordPress"
 
 #: donate.php:1054
 msgid "Rate the plugin"
-msgstr ""
+msgstr "Оцінити плагін"
 
 #: donate.php:1057
 msgid "If there is something wrong about it, please contact us"
-msgstr ""
+msgstr "Якщо у вас виникли питання, будь ласка, зверніться до нас"
 
 #~ msgid ""
 #~ "You can upload only image files ( .png, .jpg, .jpeg, .gif, .bmp, .ico, ."
